manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ocp-datalake
  annotations:
    openshift.io/display-name: ocp-datalake
  labels:
    app.kubernetes.io/part-of: ocp-datalake
    opendatahub.io/dashboard: "true"
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
