manifests/04-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: inference-ingress
  namespace: ocp-datalake
  labels:
    app.kubernetes.io/part-of: ocp-datalake
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: inference
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              network.openshift.io/policy-group: ingress
        - podSelector: {}
      ports:
        - protocol: TCP
          port: 4180
        - protocol: TCP
          port: 8080
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kserve-predictor-ingress
  namespace: ocp-datalake
  labels:
    app.kubernetes.io/part-of: ocp-datalake
spec:
  podSelector:
    matchLabels:
      serving.kserve.io/inferenceservice: churn-score
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              network.openshift.io/policy-group: ingress
        - podSelector: {}
      ports:
        - protocol: TCP
          port: 8080
        - protocol: TCP
          port: 8443
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-same-namespace
  namespace: ocp-datalake
  labels:
    app.kubernetes.io/part-of: ocp-datalake
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector: {}
